--- a/templates/base/base2.html
+++ b/templates/base/base2.html
@@ -7,7 +7,7 @@
     <title>{% block title %}Dashboard{% endblock %}</title>
     
   
-    
+    <link rel="stylesheet" href="{% static 'plugins/fontawesome-free/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/mentor_dashboard.css' %}">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <style>
@@ -31,7 +31,7 @@
         </li>
         
         <!-- Use 'startswith' check for student details to include sub-tabs -->
-        <li class="{% if '/events/event_catogery' in request.path %}active{% endif %}">
+        <li class="{% if '/events/event_catogery' in request.path %}active{% endif %}{% if '/events/category-list/' in request.path %}active{% endif %}{% if '/events/create-category/' in request.path %}active{% endif %}">
             <a href="/events/event_catogery/">
                 <i class='bx bxs-group'></i>
                 <span class="text">Event Category</span>
@@ -40,7 +40,7 @@
         
         
         
-        <li class="{% if '/events/events_dashboard' in request.path %}active{% endif %}">
+        <li class="{% if '/events/events_dashboard' in request.path %}active{% endif %}{% if '/events/join-event-list/' in request.path %}active{% endif %}{% if '/events/event-list/' in request.path %}active{% endif %}{% if '/events/event-create' in request.path %}active{% endif %}">
             <a href="/events/events_dashboard/">
                 <i class='bx bxs-message-dots'></i>
                 <span class="text">Events</span>
