--- a/templates/index.html
+++ b/templates/index.html
@@ -163,7 +163,7 @@
         <div class="frame-24">
           <div class="dropdown">
             <input type="checkbox" id="dropdown-toggle" class="dropdown-toggle">
-            <label for="dropdown-toggle" class="login">Login</label>
+            <a href='login' for="dropdown-toggle" class="login">Login</a>
            
           </div>
           
