--- a/templates/base/base2.html
+++ b/templates/base/base2.html
@@ -23,7 +23,7 @@
         <span class="text">Event</span>
     </a>
     <ul class="side-menu top">
-        <li class="{% if request.path == '/' %}active{% endif %}">
+        <li class="{% if request.path == '/dashboard/' %}active{% endif %}">
             <a href="{% url 'dashboard' %}" class="nav-link">
                 <i class='bx bxs-dashboard'></i>
                 <span class="text">Dashboard</span>
