--- a/templates/login.html
+++ b/templates/login.html
@@ -220,7 +220,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="heading">Welcome Mentor,</div>
+        <div class="heading">Welcome Planner,</div>
         <h2>Sign in to continue</h2>
         <form method="POST" class="form">
             {% csrf_token %}
